# flyte-mnist

./: .gitignore  README-k3s.md  README.md  demo.ipynb  docker_build.sh  intro.ipynb  kubectl.py  play.ipynb  pyproject.toml  requirements.txt
minio/: file_downloader.py  file_uploader.py
workflows/: get_huggingface_dataset.py  get_huggingface_dataset_stream.py  lightning_training.py  pytorch_single_node_and_gpu.py  simple_wf.py  train_wine.py
