[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.13"

datasets = "^3.0.0"
flytekit = "^1.13"
flytekitplugins-deck-standard = "^1.13.5"
flytekitplugins-kfpytorch = "^1.13.5"
ipykernel = "^6.29.5"
lightning = "^2.4.0"
minio = "^7.2.9"
torch = "^2.2"
torchvision = "^0"
s3torchconnector = "^1.2.5"
scikit-learn = "^1.5.2"
wandb = "^0.18.3"
